@@ -1,4 +1,5 @@
 # next
+- Reducing need to redraw Queue after moving items around
 - Minor UI tweaks
 
 # 5.1
